--- a/sub/web1/index.html
+++ b/sub/web1/index.html
@@ -158,7 +158,7 @@
                     <a href="#"><img src="img/song.jpg" alt="가니송이미지"></a>
                     <h3>가니송</h3>
                     <p>썸머 셔링 로맨틱<br>원피스 블랙</p>
-                    <strong>159,000원</strong>
+                    <p><strong>159,000원</strong></p>
                 </div><!-- .nd end -->
 
 
@@ -166,6 +166,28 @@
             </div><!-- .and end -->
         </div><!-- .rand end -->
     </section><!-- .Brand end -->
+    <footer>
+        <section class="last">
+            <div class="list">
+                <ul>
+                    <li><a href="#"><img src="img/youtube.png" alt="유튜브이미지" /></a></li>
+                    <li><a href="#"><img src="img/instar.png" alt="인스타이미지" /></a></li>
+                    <li><a href="#"><img src="img/facebook.png" alt="페이스북이미지" /></a></li>
+                    <li><a href="#"><img src="img/twitter.png" alt="트위터이미지" /></a></li>
+                    <li><a href="#"><img src="img/naver.png" alt="네이버이미지" /></a></li>
+                    <li><a href="#"><img src="img/studio.png" alt="스튜디오이미지" /></a></li>
+                    <li><a href="#"><img src="img/tv.png" alt="티비이미지" /></a></li>
+                    <li><a href="#"><img src="img/terrace.png" alt="무신사이미지" /></a></li>
+                </ul>
+            </div><!-- .list end -->
+            <div class="ment">
+                <span>COPYRIGHT (C) MUSINSA ALL RIGHTS RESERVED.</span>
+                <p>무신사닷컴 내 매거진, 스트리트스냅, 스토어 등 무신사 자체 생성 콘텐츠는 무신사닷컴 및 무신사 계약업체에 저작권이 있습니다.<br>
+                    이러한 콘텐츠는 출처를 밝히고(무신사닷컴 표기 및 www.musinsa.com 링크 포함 필수) 비상업적인 용도에서만 활용하실 수 있습니다. <a href="#">자세히보기</a></p>
+                <p>커뮤니티 및 중고장터, 댓글 등 무신사 회원이 올린 이미지가 저작권에 위배될 경우 <a href="#">신고</a> 하시면 검토 후 삭제하겠습니다.</p>
+            </div>
+        </section>
+    </footer>
         
 </body>
 </html>
